--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author :
   email : bicourses@igc.gulbenkian.pt
   github : github.com/GTPB
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : https://maccardoso.github.io/PDA18
+production_url : https://gtpb.github.io/PDA18
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -49,7 +49,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : https://maccardoso.github.io/PDA18
+  BASE_PATH : https://gtpb.github.io/PDA18
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
